сделал открывающие окна

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -188,7 +188,12 @@
       </section>        
     </main>
     @@include('footer/index.html')
+    @@include('buttonarrow/index.html', {
+      "class":"button-arrow_js button-arrow_top hidden"
+    })
+    
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="index.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
