--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -194,6 +194,6 @@
     
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="index.js"></script>
-    <script src="/index.js"></script>
+    <script src="/common.js"></script>
   </body>
 </html>
