--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -193,7 +193,7 @@
     })
     
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <!-- <script src="index.js"></script> -->
+    <script src="index.js"></script>
     <script src="static/images/index.js"></script>
   </body>
 </html>
