--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -192,7 +192,7 @@
     @@include('buttonarrow/index.html', {
       "class":"button-arrow_js button-arrow_top hidden"
     })
-    
+    <div class="loader-container_js"></div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="index.js"></script>
     <script src="static/images/index.js"></script>
